feat: add spark logic